<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dp">

		<TextView
			android:id="@+id/league_textview"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:contentDescription="@string/dscr_league"
			android:gravity="center"
			android:textColor="@android:color/black"
			android:textSize="@dimen/League"
			tools:text="Test"/>

		<TextView
			android:id="@+id/matchday_textview"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:contentDescription="@string/dscr_matchday"
			android:gravity="center"
			android:textColor="@android:color/black"
			android:textSize="@dimen/League"
			tools:text="123"/>
	</LinearLayout>

	<FrameLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dp">

		<Button
			android:id="@+id/share_button"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:contentDescription="@string/dscr_share"
			android:drawableLeft="@android:drawable/ic_menu_share"
			android:gravity="center"
			android:paddingLeft="120dp"
			android:paddingRight="120dp"
			android:text="@string/share_text"/>
	</FrameLayout>

</LinearLayout>