<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_margin="4dip"
              android:background="@drawable/appwidget_bg"
              android:orientation="vertical">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:baselineAligned="false"
		android:orientation="horizontal"
		android:paddingTop="5dp">

		<LinearLayout
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:orientation="vertical">

			<ImageView
				android:id="@+id/home_crest"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:layout_marginTop="8dip"
				tools:src="@drawable/chelsea"/>

			<TextView
				android:id="@+id/home_name"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:layout_marginBottom="8dip"
				android:layout_marginTop="8dip"
				android:contentDescription="@string/dscr_home_team"
				android:gravity="center"
				android:textSize="@dimen/TeamNames"
				tools:text="1 FC Yodel"/>
		</LinearLayout>

		<LinearLayout
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:orientation="vertical">

			<TextView
				android:id="@+id/score_textview"
				android:layout_width="wrap_content"
				android:layout_height="0dp"
				android:layout_gravity="center"
				android:layout_weight="1"
				android:contentDescription="@string/dscr_score"
				android:gravity="center"
				android:textSize="@dimen/Score"
				tools:text="0 - 0"/>

			<TextView
				android:id="@+id/data_textview"
				android:layout_width="wrap_content"
				android:layout_height="0dp"
				android:layout_gravity="center"
				android:layout_weight="1"
				android:contentDescription="@string/dscr_time"
				android:gravity="center"
				tools:text="19:00"/>

		</LinearLayout>

		<LinearLayout
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:orientation="vertical">

			<ImageView
				android:id="@+id/away_crest"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:layout_marginTop="8dip"
				tools:src="@drawable/burney_fc_hd_logo"/>

			<TextView
				android:id="@+id/away_name"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:layout_marginBottom="8dip"
				android:layout_marginTop="8dip"
				android:contentDescription="@string/dscr_away_team"
				android:gravity="center"
				android:text="ASDF Lederhosen"
				android:textSize="@dimen/TeamNames"/>
		</LinearLayout>
	</LinearLayout>

	<FrameLayout
		android:id="@+id/details_fragment_container"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
	</FrameLayout>
</LinearLayout>


